<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/bioText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="200dp"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:text="@string/bioSum"/>

            <ImageView
                android:id="@+id/zanderArtist"
                android:layout_width="match_parent"
                android:layout_height="420dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/zander"
                android:scaleType="centerInside"
                android:src="@drawable/zander_artist" />
        </LinearLayout>


        <TextView
            android:id="@+id/bioText2"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:enabled="true"
            android:maxLines="40"
            android:minWidth="400dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:text="@string/bio" />


        <Button
            android:id="@+id/tickets"
            android:background="@drawable/shadow"
            android:layout_margin="2dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hello_world"
            android:typeface="monospace"
            android:focusableInTouchMode="false" />

        <Button
            android:id="@+id/aotw"
            android:background="@drawable/shadow"
            android:layout_margin="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:typeface="monospace"
            android:text="@string/aotw"/>

    </LinearLayout>

</ScrollView>